# PPOIS

PPOIS/lab_1/TicTacToe/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
PPOIS/lab_1/TicTacToe/docs/html/: TicTacToe_8cpp.html  TicTacToe_8cpp_source.html  annotated.html  annotated_dup.js  classBoard-members.html  classBoard.html  classConsoleInputHandler.html  classConsoleOutputHandler-members.html  classGame-members.html  classGame.js  classGameBoard.html  classGameBoard.js  classGameLogic-members.html  classGameLogic.html  classInputHandler-members.html  classInputHandler.html  classOutputHandler.html  classStandardGameLogic.html  classStandardGameLogic.js  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_d44c64559bbebec7f509842c48db8b23.js  doxygen_crawl.html  functions.html  functions_func.html  globals.html  globals_enum.html  globals_vars.html  index.html  menudata.js  navtreedata.js  navtreeindex0.js
PPOIS/lab_1/TicTacToe/docs/html/search/: all_1.js  all_2.js  all_5.js  all_a.js  all_e.js  classes_1.js  enumvalues_0.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  searchdata.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js
PPOIS/lab_1/TicTacToe/include/: TicTacToe.h
PPOIS/lab_1/TicTacToe/src/: TicTacToe.cpp  main.cpp
lab_1/Sets/: CMakeLists.txt
lab_1/Sets/include/: Set.h
lab_1/Sets/src/: Set.cpp  main.cpp
lab_1/Sets/tests/: test.cpp
lab_1/TicTacToe/: CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile
lab_1/TicTacToe/docs/html/: TicTacToe_8cpp.js  TicTacToe_8h.html  TicTacToe_8h.js  TicTacToe_8h_source.html  classBoard.js  classConsoleInputHandler-members.html  classConsoleInputHandler.js  classConsoleOutputHandler.html  classConsoleOutputHandler.js  classGame.html  classGameBoard-members.html  classGameLogic.js  classInputHandler.js  classOutputHandler-members.html  classOutputHandler.js  classStandardGameLogic-members.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions_vars.html  globals_func.html  hierarchy.html  hierarchy.js  main_8cpp.html  main_8cpp_source.html
lab_1/TicTacToe/docs/html/search/: all_0.js  all_3.js  all_4.js  all_7.js  all_8.js  classes_2.js  classes_5.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_2.js  functions_5.js  variables_0.js  variables_1.js
lab_1/TicTacToe/tests/: test_tictactoe.cpp
lab_2/: CMakeLists.txt  README.md
lab_2/include/: Computer.h
lab_2/include/audio/: AudioCodec.h  SoundCard.h
lab_2/include/case/: ComputerCase.h
lab_2/include/cooling/: Fan.h  Heatsink.h
lab_2/include/cpu/: CPUCache.h
lab_2/include/exceptions/: Exceptions.h
lab_2/include/graphics/: GPU.h  GraphicsCard.h  VRAM.h
lab_2/include/interfaces/: Interfaces.h
lab_2/include/memory/: MemoryController.h  MemoryModule.h  RAM.h
lab_2/include/motherboard/: BIOS.h  Motherboard.h  PCIeSlot.h
lab_2/include/network/: NetworkAdapter.h
lab_2/include/os/: OperatingSystem.h
lab_2/include/peripherals/: Monitor.h  Mouse.h  USBDevice.h
lab_2/include/power/: PowerRail.h
lab_2/include/storage/: HardDrive.h
lab_2/src/: Computer.cpp  main.cpp
lab_2/src/audio/: SoundCard.cpp
lab_2/src/cooling/: CPUCooler.cpp  Fan.cpp
lab_2/src/cpu/: ALU.cpp  CPU.cpp  CPUCore.cpp  RegisterFile.cpp
lab_2/src/graphics/: GPU.cpp  VRAM.cpp
lab_2/src/memory/: RAM.cpp
lab_2/src/motherboard/: Chipset.cpp  Motherboard.cpp
lab_2/src/network/: NetworkAdapter.cpp  NetworkPacket.cpp
lab_2/src/os/: FileSystem.cpp
lab_2/src/peripherals/: USBDevice.cpp
lab_2/src/power/: PowerSupply.cpp
lab_2/src/storage/: HardDrive.cpp  StorageController.cpp
lab_2/tests/: test_main.cpp
lab_2/tests/audio/: test_SoundCard.cpp
lab_2/tests/cpu/: test_CPU.cpp  test_CPUCore.cpp
lab_2/tests/graphics/: test_VRAM.cpp
lab_2/tests/memory/: test_MemoryModule.cpp  test_RAM.cpp
lab_2/tests/os/: test_FileSystem.cpp  test_OperatingSystem.cpp
lab_2/tests/peripherals/: test_Mouse.cpp
lab_2/tests/power/: test_PowerSupply.cpp
lab_2/tests/storage/: test_HardDrive.cpp
sem_1/lab_1/Sets/: CMakeLists.txt
sem_1/lab_1/Sets/include/: Set.h
sem_1/lab_1/Sets/src/: main.cpp
sem_1/lab_1/Sets/tests/: test.cpp
sem_1/lab_1/TicTacToe/: CMakeLists.txt
sem_1/lab_2/: CMakeLists.txt
sem_1/lab_2/include/case/: CaseFan.h
sem_1/lab_2/include/cooling/: CPUCooler.h
sem_1/lab_2/include/cpu/: ALU.h  CPU.h  CPUCore.h  ControlUnit.h  RegisterFile.h
sem_1/lab_2/include/motherboard/: Chipset.h
sem_1/lab_2/include/network/: NetworkPacket.h
sem_1/lab_2/include/os/: FileSystem.h  Process.h
sem_1/lab_2/include/peripherals/: Keyboard.h
sem_1/lab_2/include/power/: PowerSupply.h
sem_1/lab_2/include/storage/: Partition.h  StorageController.h
sem_1/lab_2/src/: main.cpp
sem_1/lab_2/src/audio/: AudioCodec.cpp
sem_1/lab_2/src/case/: CaseFan.cpp  ComputerCase.cpp
sem_1/lab_2/src/cooling/: Heatsink.cpp
sem_1/lab_2/src/cpu/: CPUCache.cpp  ControlUnit.cpp
sem_1/lab_2/src/graphics/: GraphicsCard.cpp
sem_1/lab_2/src/memory/: MemoryController.cpp  MemoryModule.cpp
sem_1/lab_2/src/motherboard/: BIOS.cpp  PCIeSlot.cpp
sem_1/lab_2/src/os/: OperatingSystem.cpp  Process.cpp
sem_1/lab_2/src/peripherals/: Keyboard.cpp  Monitor.cpp  Mouse.cpp
sem_1/lab_2/src/power/: PowerRail.cpp
sem_1/lab_2/src/storage/: HardDrive.cpp  Partition.cpp
sem_1/lab_2/tests/cpu/: test_ALU.cpp  test_CPUCache.cpp
sem_1/lab_2/tests/graphics/: test_GPU.cpp  test_GraphicsCard.cpp
sem_1/lab_2/tests/storage/: test_Partition.cpp  (+1 more)
sem_2/lab_1/: README.md
sem_2/lab_1_v2/: README.md  main.py  pyproject.toml
sem_2/lab_1_v2/tests/: test_planner.py
sem_2/lab_1_v2/wedding_planner/: __init__.py  cli.py  entities.py  exceptions.py  operations.py  planner.py  storage.py
sem_2/lab_2/: README.md  REPORT.md  generate_demo_files.py  main.py
sem_2/lab_2/demo_files/: train_records_1.xml  train_records_2.xml  train_records_3.xml
sem_2/lab_2/train_app/: app.py  controller.py  models.py  protocols.py  repository.py  services.py  view.py  xml_storage.py
(+16 files in other folders)
